@@ -1019,12 +1019,11 @@ gpointer launch_player(gpointer data)
 
     // this argument seems to cause noise in some videos
     if (softvol || audio_device.type == AUDIO_TYPE_SOFTVOL) {
+        argv[arg++] = g_strdup_printf("-softvol");
         if (volume_gain != 0) {
             argv[arg++] = g_strdup_printf("-af-add");
             argv[arg++] = g_strdup_printf("volume=%i", volume_gain);
-        } else {
-            argv[arg++] = g_strdup_printf("-softvol");
-        }
+        } 
     }
     // might want to use this only in softvol mode
     if (use_volume_option) {
